[FIX] website_event_track: set the track visibility based on its track stage
PURPOSE

The administrator will have to configure the track stages manually by using booleans
which are not really intuitive to use. To simplify the configuration, the visibility
of the tracks will now be determined by its track stage.

- When the track is in the track stage "announced", the track will be visible in
  the frontend but the access link will not be provided.
- When the track is in the track stage "published", the track will be visible in
  the frontend and the access link will be provided.
- When the track is in the track stages "new", "refused" or "cancelled", the track
  will not be visible and not provided in the frontend.

SPECS

- Remove the fields `is_accepted`, `is_done` and `is_cancel` from the models.
- Minor layout changes

LINKS

Task ID: 2347597

--- a/addons/website_event/static/src/scss/event_templates_common.scss
+++ b/addons/website_event/static/src/scss/event_templates_common.scss
@@ -88,10 +88,6 @@
      */
 
     .o_wevent_online {
-        // unpublished badge: put opacity to distinguish form other badges
-        .o_wevent_online_badge_unpublished{
-            opacity: 0.4;
-        }
 
         &.o_wevent_online_bg {
             @if (color('body') == $o-portal-default-body-bg) {
